Small refactor to spacing class generator

--- a/src/styles/abstracts/_var-layout.scss
+++ b/src/styles/abstracts/_var-layout.scss
@@ -34,6 +34,19 @@ $m-padding--xs: 4px !default;
 // ======================================================================
 //  spacing
 // ======================================================================
+
+$m-spacing-map: (
+    '--xxxxl': 64px,
+    '--xxxl': 56px,
+    '--xxl': 48px,
+    '--xl': 40px,
+    '--l': 32px,
+    '--m': 24px,
+    '': 16px,
+    '--s': 8px,
+    '--xs': 4px
+);
+
 $m-spacing--xxxxl: 64px !default;
 $m-spacing--xxxl: 56px !default;
 $m-spacing--xxl: 48px !default;
@@ -43,3 +56,4 @@ $m-spacing--m: 24px !default;
 $m-spacing: 16px !default;
 $m-spacing--s: 8px !default;
 $m-spacing--xs: 4px !default;
+
