--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -108,5 +108,25 @@
         }
     }
 
+    @mixin m-spacing-factory() {
+        $m-props: 'margin', 'padding';
+        $m-directions: '', '-top', '-right', '-bottom', '-left';
+
+        @each $prop in $m-props {
+            @each $direction in $m-directions {
+                &--no-#{$prop}#{$direction} {
+                    #{$prop}#{$direction}: 0;
+                }
+
+                @each $size, $spacing in $m-spacing-map {
+                    &--#{$prop}#{$direction}#{$size} {
+                        #{$prop}#{$direction}: $spacing;
+                    }
+                }
+            }
+        }
+    }
+
     @include m-margin-padding();
+    @include m-spacing-factory();
 }
