--- a/src/components/tree/tree.sandbox.html
+++ b/src/components/tree/tree.sandbox.html
@@ -1,13 +1,11 @@
 <div>
-    <!-- Sandbox template -->
     <h3>Test Title</h3>
     <p class="m-u--margin-bottom">
         Test description
-        <!-- if relevant, add link to PR
-        </br>From <a href="https://github.com/ulaval/modul-components/pull/000" target="blank">PR description</a>
-        -->
     </p>
+    <br>
+    <br>
     <p>
-        <m-tree><!-- Test case --></m-tree>
+        <m-tree :tree="testArbo"></m-tree>
     </p>
 </div>
