--- a/src/components/limit-text/limit-text.sandbox.html
+++ b/src/components/limit-text/limit-text.sandbox.html
@@ -113,4 +113,14 @@
             do sit sit commodo.</p>
         </m-limit-text>
     </p>
+    <h3>Title, 2 lines</h3>
+    <p class="m-u--margin-bottom">Limit-text with a title, 2 lines limit</p>
+    <p>
+        <m-limit-text lines="2">
+            <h2>Eiusmod runt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut
+            excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco
+            sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
+            do sit sit commodo.</h2>
+        </m-limit-text>
+    </p>
 </div>
