--- a/src/components/limit-text/limit-text.scss
+++ b/src/components/limit-text/limit-text.scss
@@ -1,25 +1,25 @@
-@import 'abstracts/variables';
+// @import 'abstracts/variables';
 
-.m-limit-text {
-    position: relative;
+// .m-limit-text {
+//     position: relative;
 
-    &__container {
-        overflow: hidden;
-        transition: max-height $m-transition-duration ease;
+//     &__container {
+//         overflow: hidden;
+//         transition: max-height $m-transition-duration ease;
 
-        & > *:first-child {
-            margin-top: 0 !important;
-        }
+//         & > *:first-child {
+//             margin-top: 0 !important;
+//         }
 
-        & > *:last-child {
-            margin-bottom: 0 !important;
-        }
-    }
+//         & > *:last-child {
+//             margin-bottom: 0 !important;
+//         }
+//     }
 
-    &__test {
-        position: absolute;
-        left: -9999px;
-        top: -9999px;
-        visibility: hidden;
-    }
-}
+//     &__test {
+//         position: absolute;
+//         left: -9999px;
+//         top: -9999px;
+//         visibility: hidden;
+//     }
+// }
