--- a/src/components/tree/tree.scss
+++ b/src/components/tree/tree.scss
@@ -5,7 +5,7 @@
         margin-left: $m-margin--l + 4px;
 
         &__selected {
-            color: pink;
+            background-color: $m-color--grey-light;
         }
     }
 
