--- a/src/components/limit-text/limit-text.sandbox.html
+++ b/src/components/limit-text/limit-text.sandbox.html
@@ -3,7 +3,7 @@
     <h3>Only text, 4 lines</h3>
     <p class="m-u--margin-bottom">Limit-text with only text character, 4 lines limit</p>
     <p>
-        <m-limit-text>Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut
+        <m-limit-text show-label=" test " hide-label=" test2 ">Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut
             excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco
             sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
             do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident
@@ -28,7 +28,7 @@
             do sit sit commodo.
         </m-limit-text>
     </p>
-    <h3>Only text, 2 lines</h3>
+    <!-- <h3>Only text, 2 lines</h3>
     <p class="m-u--margin-bottom">Limit-text with only text character, 2 lines limit</p>
     <p>
         <m-limit-text lines="2">Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut
@@ -122,5 +122,5 @@
             sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
             do sit sit commodo.</h2>
         </m-limit-text>
-    </p>
+    </p> -->
 </div>
