--- a/src/components/limit-text/limit-text.html
+++ b/src/components/limit-text/limit-text.html
@@ -2,6 +2,6 @@
     <div ref="originalText" class="m-limit-text__original" v-show="!hasFinish">
         <slot></slot>
     </div>
-    <m-dynamic-template @updated="onUpdatedOpen($event)" :template="getReduceText" v-if="!open"></m-dynamic-template>
-    <m-dynamic-template @updated="onUpdatedClose($event)" :template="getFullText" v-if="open"></m-dynamic-template>
+    <m-dynamic-template @updated="onUpdatedOpen($event)" :template="getReduceText" v-if="!internalOpen"></m-dynamic-template>
+    <m-dynamic-template @updated="onUpdatedClose($event)" :template="getFullText" v-if="internalOpen"></m-dynamic-template>
 </div>
