Ajustements au sandbox du dropdown

--- a/src/components/dropdown/dropdown.sandbox.html
+++ b/src/components/dropdown/dropdown.sandbox.html
@@ -1,12 +1,6 @@
 <div>
     <!-- Sandbox template -->
-    <h3>Test Title</h3>
-    <p class="m-u--margin-bottom">
-        Test description
-        <!-- if relevant, add link to PR
-        </br>From <a href="https://github.com/ulaval/modul-components/pull/000" target="blank" label="PR description</a>
-        -->
-    </p>
+    <h3>Liste déroulante filtrable</h3>
     <p>
         <m-dropdown :filterable="true" placeholder="Choisir un pays">
             <m-dropdown-item value="AF" label="AFGHANISTAN"></m-dropdown-item>
@@ -252,6 +246,21 @@
             <m-dropdown-item value="YE" label="YÉMEN"></m-dropdown-item>
             <m-dropdown-item value="ZM" label="ZAMBIE"></m-dropdown-item>
             <m-dropdown-item value="ZW" label="ZIMBABWE"></m-dropdown-item>
+        </m-dropdown>
+    </p>
+
+    <!-- Sandbox template -->
+    <br><br><br><br><br>
+    <h3>Test Title</h3>
+    <p class="m-u--margin-bottom">
+        Test description
+        <!-- if relevant, add link to PR
+        </br>From <a href="https://github.com/ulaval/modul-components/pull/000" target="blank" label="PR description</a>
+        -->
+    </p>
+    <p>
+        <m-dropdown>
+            <m-dropdown-item value="" label=""></m-dropdown-item>
         </m-dropdown>
     </p>
 </div>
