--- a/src/components/limit-text/limit-text.sandbox.html
+++ b/src/components/limit-text/limit-text.sandbox.html
@@ -2,7 +2,7 @@
     <!-- Sandbox template -->
     <h3>Only text, 4 lines</h3>
     <p class="m-u--margin-bottom">Limit-text with only text character, 4 lines limit</p>
-    <p>
+    <div>
         <m-limit-text>Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut
             excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco
             sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
@@ -27,10 +27,10 @@
             sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
             do sit sit commodo.
         </m-limit-text>
-    </p>
+    </div>
     <h3>Only text, 2 lines</h3>
     <p class="m-u--margin-bottom">Limit-text with only text character, 2 lines limit</p>
-    <p>
+    <div>
         <m-limit-text lines="2">Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut
             excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco
             sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
@@ -55,10 +55,10 @@
             sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
             do sit sit commodo.
         </m-limit-text>
-    </p>
+    </div>
     <h3>Multi paragraph, 4 lines</h3>
     <p class="m-u--margin-bottom">Limit-text with paragraph, 4 lines limit</p>
-    <p>
+    <div>
         <m-limit-text lines="4"><p>Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut
             excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco
             sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
@@ -83,10 +83,10 @@
             sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
             do sit sit commodo.</p>
         </m-limit-text>
-    </p>
+    </div>
     <h3>Paragraph and title, 4 lines</h3>
     <p class="m-u--margin-bottom">Limit-text with paragraph, 4 lines limit</p>
-    <p>
+    <div>
         <m-limit-text lines="4">
             <h4>Eiusmod sint minim eu id consequat esse veniam.</h4>
             <p>Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut
@@ -112,15 +112,40 @@
             sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
             do sit sit commodo.</p>
         </m-limit-text>
-    </p>
+    </div>
     <h3>Title, 2 lines</h3>
     <p class="m-u--margin-bottom">Limit-text with a title, 2 lines limit</p>
-    <p>
+    <div>
         <m-limit-text lines="2">
             <h2>Eiusmod runt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut
             excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco
             sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
             do sit sit commodo.</h2>
         </m-limit-text>
-    </p>
+    </div>
+    <h3>Custom label, 4 lines</h3>
+    <p class="m-u--margin-bottom">Limit-text with custom label, 4 lines limit</p>
+    <div>
+        <m-limit-text lines="4" open-label="open it" close-label="close it">
+            <p>Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut
+            excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco
+            sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum
+            aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam
+            amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad est sunt commodo. Eiusmod sint
+            minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt ad amet sint in esse aute. Ut
+            est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur tempor ipsum qui eu. Anim
+            culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint quis exercitation amet ad
+            est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do sit sit commodo. Deserunt
+            ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut excepteur
+            tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco sint
+            quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore do
+            sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatatmollit ipsum aliqua nostrud. Proident aliqua anim tempor ut
+            excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco
+            sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
+            do sit sit commodo. Deserunt ad amet sint in esse aute. Ut est cupidatat mollit ipsum aliqua nostrud. Proident aliqua anim tempor ut
+            excepteur tempor ipsum qui eu. Anim culpa voluptate occaecat veniam amet reprehenderit irure.Culpa laborum ullamco
+            sint quis exercitation amet ad est sunt commodo. Eiusmod sint minim eu id consequat esse veniam. Ullamco labore
+            do sit sit commodo.</p>
+        </m-limit-text>
+    </div>
 </div>
