--- a/src/components/input-style/input-style.scss
+++ b/src/components/input-style/input-style.scss
@@ -40,7 +40,7 @@ $m-input-style--padding: 4px !default;
 
     &:hover:not(.m--is-disabled):not(.m--is-waiting):not(.m--has-error):not(.m--is-valid):not(.m--is-focus),
     &.m--has-value {
-        &:not(.m--is-readonly)::before {
+        &:not(.m--is-readonly):not(.m--has-error)::before {
             border-color: $m-color--text;
         }
     }
@@ -55,7 +55,9 @@ $m-input-style--padding: 4px !default;
         &::after {
             width: 100%;
         }
+    }
 
+    &.m--is-focus:not(.m--has-error) {
         .m-input-style__label,
         .m-icon-button.m-icon-button,
         .m-icon.m-icon {
