MODUL-205 retirer le détail de l'erreur pour les laisser seulement dans l'Erreur technique

--- a/src/components/error-message/error-message.html
+++ b/src/components/error-message/error-message.html
@@ -7,7 +7,7 @@
     <m-accordion skin="light" icon-size="small">
         <m-i18n slot="header" k="m-error-message:details"></m-i18n>
         <p><strong><m-i18n k="m-error-message:browser"></m-i18n>: </strong>{{userAgent}}</p>
-        <p v-if="!!referenceNumber"><strong><m-i18n k="m-error-message:reference-number"></m-i18n>: </strong>{{referenceNumber}}</p>
+        <p v-if="!!errorReferenceNumber"><strong><m-i18n k="m-error-message:reference-number"></m-i18n>: </strong>{{errorReferenceNumber}}</p>
         <p><m-i18n k="m-error-message:date" :params="dateInfo"></m-i18n></p>
         <m-panel  class="m-error-message__stacktrace" :padding="false" v-if="propStacktrace">
             <pre>{{error.stack}}</pre>
