--- a/src/components/file-upload/file-upload.html
+++ b/src/components/file-upload/file-upload.html
@@ -30,7 +30,7 @@
         <div class="m-file-upload__drop-zone">
             <div class="m-file-upload__drop-zone__instructions">
                 <h2 v-if="isMqMinS">
-                    <m-icon name="drag-drop" size="48px"></m-icon>
+                    <m-icon name="down-arrow-lined" size="32px"></m-icon>
                     <m-i18n k="m-file-upload:title"></m-i18n>
                 </h2>
                 <m-file-select class="m-file-upload__drop-zone__instructions__button" skin="secondary" :multiple="maxFiles > 1 ? true : false" :store-name="storeName"
