--- a/src/components/icon/icon.sandbox.html
+++ b/src/components/icon/icon.sandbox.html
@@ -1,4 +1,21 @@
 <div>
+    <h3>Icône</h3>
+    <h4>Propriété name vide</h4>
+    <p>
+        <m-icon></m-icon>
+    </p>
+    <h4>Propriété name invalide</h4>
+    <p>
+        <m-icon name="1234"></m-icon>
+    </p>
+    <h4>Propriété name courte</h4>
+    <p>
+        <m-icon name="edit"></m-icon>
+    </p>
+    <h4>Propriété name original</h4>
+    <p>
+        <m-icon name="m-svg__edit"></m-icon>
+    </p>
     <h3>Pastille</h3>
     <h4>États de la pastille</h4>
     <p>
