MODUL-251 - remove propWith and marfinLeft in m-dialog

--- a/src/components/dialog/dialog.html
+++ b/src/components/dialog/dialog.html
@@ -12,7 +12,7 @@
                             'm--is-disabled':disabled }, className ]"
                  @click.self="backdropClick()"
                  ref="dialogWrap">
-                <article class="m-dialog__article" :style="{ width: propWidth, 'margin-left': marginLeft }" ref="article">
+                <article class="m-dialog__article" ref="article">
                     <header>
                         <div class="m-dialog__header"
                              :class="{ 'm--has-title': hasTitle,
