MODUL-251 - add 'flex-shrink: 0' in CSS of m-dialog and m-edit-window

--- a/src/components/dialog/dialog.html
+++ b/src/components/dialog/dialog.html
@@ -13,28 +13,25 @@
                  @click.self="backdropClick()"
                  ref="dialogWrap">
                 <article class="m-dialog__article" ref="article">
-                    <header>
-                        <div class="m-dialog__header"
-                             :class="{ 'm--has-title': hasTitle,
-                                       'm--has-content': hasHeader,
-                                       'm--no-padding': !padding || !paddingHeader }">
-                            <h2 v-if="hasTitle">{{ title }}</h2>
-                            <slot name="header"></slot>
-                            <m-icon-button @click="closeDialog()" icon-name="close" skin="dark" class="m-dialog__header__close-button">
-                                <m-i18n k="m-dialog:close"></m-i18n>
-                            </m-icon-button>
-                        </div>
+                    <header class="m-dialog__header"
+                            :class="{ 'm--has-title': hasTitle,
+                                    'm--has-content': hasHeader,
+                                    'm--no-padding': !padding || !paddingHeader }">
+                        <h2 v-if="hasTitle">{{ title }}</h2>
+                        <slot name="header"></slot>
+                        <m-icon-button @click="closeDialog()" icon-name="close" skin="dark" class="m-dialog__header__close-button">
+                            <m-i18n k="m-dialog:close"></m-i18n>
+                        </m-icon-button>
                     </header>
                     <div class="m-dialog__body" ref="body"
                          :class="{ 'm--no-padding': !padding || !paddingBody }" v-if="hasDefaultSlot">
                         <slot></slot>
                     </div>
-                    <footer v-if="hasFooterSlot">
-                        <div class="m-dialog__footer"
-                             :class="{ 'm--no-padding': !padding || !paddingFooter }">
-                            <div>
-                                <slot name="footer"></slot>
-                            </div>
+                    <footer class="m-dialog__footer"
+                            :class="{ 'm--no-padding': !padding || !paddingFooter }"
+                            v-if="hasFooterSlot">
+                        <div>
+                            <slot name="footer"></slot>
                         </div>
                     </footer>
                 </article>
