--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -142,6 +142,7 @@ $m-dialog--max-width--s: 420px !default;
 
     &__header,
     &__footer {
+        flex-shrink: 0;
         min-height: $m-box--min-height;
 
         @include m-box-padding($m-padding);
