--- a/src/components/icon-file/icon-file.sandbox.html
+++ b/src/components/icon-file/icon-file.sandbox.html
@@ -81,7 +81,7 @@
     <m-icon-file extension=".gtar"></m-icon-file>
     <m-icon-file extension=".gz"></m-icon-file>
 
-    <h5>openoffice1</h5>
+    <h5>openoffice</h5>
     <m-icon-file extension=".sxw"></m-icon-file>
     <m-icon-file extension=".sxi"></m-icon-file>
     <m-icon-file extension=".sxd"></m-icon-file>
