Update icon-name in component

--- a/src/components/file-upload/file-upload.html
+++ b/src/components/file-upload/file-upload.html
@@ -29,7 +29,7 @@
 
         <div class="m-file-upload__drop-zone">
             <h2 v-if="isMqMinS">
-                <m-icon name="m-svg__drag-drop" size="48px"></m-icon>
+                <m-icon name="m-svg__dragndrop" size="48px"></m-icon>
                 <m-i18n k="m-file-upload:title"></m-i18n>
             </h2>
             <p v-if="isMqMinS" class="m-file-upload__drop-zone__or">
@@ -64,7 +64,7 @@
                             </p>
                         </div>
                         <div class="m-file-upload__import-list__delete">
-                            <m-icon-button class="m-file-upload__import-list__button" icon-name="m-svg__close" button-size="32px" icon-size="12px" @click="onUploadCancel(file)"></m-icon-button>
+                            <m-icon-button class="m-file-upload__import-list__button" icon-name="m-svg__close-clear" button-size="32px" icon-size="12px" @click="onUploadCancel(file)"></m-icon-button>
                         </div>
                     </div>
                 </li>
