--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -23,7 +23,7 @@
     </nav>
     <transition name="show">
         <div ref="buttonRight" class="m-navbar__button" @click="scrollRight" v-if="showArrowRight && arrowMobile">
-            <m-icon-button :skin="buttonSkin" icon-name="m-svg__chevron"></m-icon-button>
+            <m-icon-button :skin="buttonSkin" icon-name="m-svg__chevron--right"></m-icon-button>
         </div>
     </transition>
     </div>
