modifier pour correspondre aux nouvelles maquettes (icone en haut au lieu de message, et titre au lieu du message)

--- a/src/components/error-message/error-message.sandbox.html
+++ b/src/components/error-message/error-message.sandbox.html
@@ -1,6 +1,6 @@
 <div>
     <h5>default</h5>
-    <div style="border: solid 1px black">
+    <div style="border: solid 1px black;">
         <m-error-message></m-error-message>
     </div>
 
