--- a/src/components/icon-file/icon-file.sandbox.html
+++ b/src/components/icon-file/icon-file.sandbox.html
@@ -66,7 +66,7 @@
     <m-icon-file extension=".mp4"></m-icon-file>
     <m-icon-file extension=".avi"></m-icon-file>
 
-    <h5>music</h5>
+    <h5>audio</h5>
     <m-icon-file extension=".mp3"></m-icon-file>
     <m-icon-file extension=".ogg"></m-icon-file>
     <m-icon-file extension=".wav"></m-icon-file>
