enable to provide rich-text license through plugin options

--- a/src/components/rich-text-editor/rich-text-editor.html
+++ b/src/components/rich-text-editor/rich-text-editor.html
@@ -1,3 +1,4 @@
 <div class="test">
+    TEST {{ licenseKey }}
     <froala :tag="tag" :config="internalOptions" @input="refreshModel"></froala>
 </div>
