--- a/src/components/rich-text-editor/rich-text-editor.sandbox.html
+++ b/src/components/rich-text-editor/rich-text-editor.sandbox.html
@@ -5,6 +5,9 @@
         fonctionne sans options spécifiée
     </p>
     <p>
-        <m-rich-text-editor ></m-rich-text-editor>
+        <m-rich-text-editor></m-rich-text-editor>
+    </p>
+    <p>
+        <async-component></async-component>
     </p>
 </div>
